# OneSilaMagento2Api

./: .env.example  .gitignore  .readthedocs.yaml  CLAUDE.md  README.rst  changelog.rst  interact-with-api.rst  pyproject.toml  requirements.txt  setup.py
docs/source/: README.rst  changelog.rst  interact-with-api.rst
docs/source/_snippets/: available_endpoints.rst
magento/: __init__.py  clients.py  constants.py  decorators.py  exceptions.py  status_codes.py  utils.py
magento/managers/: __init__.py  attribute_set.py  category.py  coupon.py  customer.py  invoice.py  manager.py  order.py  product.py  sales_rule.py  shipment.py  tax.py
magento/models/: __init__.py  attribute_set.py  category.py  configurable_product.py  coupon.py  customer.py  invoice.py  model.py  order.py  product.py  sales_rule.py  shipment.py  tax.py
tests/: logger_test.py  mixins.py  test_client_url_for.py
tests/models/: test_attribute_sets.py  test_configurable_products.py  test_orders.py  test_products.py  test_shipments.py
